viken-no-k8s.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: fint-skjema-configuration-service
  name: fint-skjema-configuration-service
spec:
  ports:
    #- name: "8080"
    - port: 8080
  type: ClusterIP
  selector:
    io.kompose.service: fint-skjema-configuration-service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fint-skjema-configuration-service
  #namespace: viken-no
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - http:
        paths:
          - path: /viken-no(/api/integration/configuration/.*)
            pathType: Prefix
            backend:
              service:
                name: fint-skjema-configuration-service
                port:
                  number: 8080
          - path: /viken-no(/api/kodeverk/.*)
            pathType: Prefix
            backend:
              service:
                name: fint-skjema-configuration-service
                port:
                  number: 8080
          - path: /viken-no(/api/sak/.*)
            pathType: Prefix
            backend:
              service:
                name: fint-skjema-configuration-service
                port:
                  number: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    io.kompose.service: fint-skjema-configuration-service
  name: fint-skjema-configuration-service
  #namespace: viken-no
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      io.kompose.service: fint-skjema-configuration-service
  template:
    metadata:
      labels:
        io.kompose.service: fint-skjema-configuration-service
    spec:
      restartPolicy: Always
      volumes:
        - name: credentials
          secret:
            secretName: aiven-kafka-certificates
      containers:
        #- image: fintlabsacr.azurecr.io/fint-skjema-configuration-service:build.${BUILD_NUMBER}_${GIT_COMMIT}
        - image: fintlabsacr.azurecr.io/fint-skjema-configuration-service:dummy
          name: fint-skjema-configuration-service
          volumeMounts:
            - name: credentials
              mountPath: /credentials
          resources:
            limits:
              memory: "512Mi"
              cpu: "1"
            requests:
              memory: "128Mi"
              cpu: "100m"
          ports:
            - containerPort: 8080
